...
  //save workout
  Future<void> saveWorkout() async {
    if (!formKey.currentState!.validate()) return;

    if (selectedExercises.isEmpty) {
      ScaffoldMessenger.of(context).showSnackBar(
          const SnackBar(content: Text('Add at least one exercise')));
      return;
    }
    final workoutName = nameController.text.trim();
    final authService = AuthenticationService();
    final user = authService.getCurrentUser();

...
            restBetweenSets: draftExercise.rest,
            durationOfTimedSet: draftExercise.duration,
            distance: draftExercise.distance,)
      );
    }
    ScaffoldMessenger.of(context).showSnackBar(
      SnackBar(content: Text('Workout successfully created'),duration: Duration(seconds: 2),),
    );
    Navigator.pop(context, true);
  }

  //function for adding an exercise to the workout list
  Future<void> addExerciseFlow() async {
...
                  ),
                  child: const Row(
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      Icon(Icons.save),
                      SizedBox(width: 8),
                      Text('Save Workout',style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold,letterSpacing: 1),
                      )]),
                ))],
          ))));
  }
//showing when user has not added any exercises yet
  Widget buildEmptyState() {
...
