...
          return AlertDialog(
            title: Text('Edit ${instance.exercise.name}'),
            content: SingleChildScrollView(
                child: Column(
                  children: [
                    if(type == 'STRENGTH') ...[
                      numberField(sets, 'Sets (1-8)'),
                      numberField(reps, 'Reps (1-50)'),
                      numberField(rest, 'Rest seconds (10-600'),
                    ],
                    if(type == 'CARDIO' || type == 'PLYOMETRICS') ...[
                      numberField(sets, 'Sets (1-10)'),
                      numberField(duration, 'Duration seconds (10-7200)'),
                      numberField(rest, 'Rest seconds (20-600'),
...
                      instance.distance = double.parse(distance.text);
                    }
                    if (type == 'STRETCHING') {
                      instance.duration = int.parse(duration.text);
                    }
                    ScaffoldMessenger.of(context).showSnackBar(
                      SnackBar(content: Text('Changes saved'),duration: Duration(seconds: 2),),
                    );
                    Navigator.pop(context, instance);
                  },
                  child: const Text('Save'))
            ],
          );
        }
    );
  }

...
              ElevatedButton(
                style: ElevatedButton.styleFrom(
                  backgroundColor: Colors.red,
                  foregroundColor: Colors.white,
                ),
                onPressed: () => Navigator.pop(context, true),
                child:  Text('Delete'),
              )]),
    );

    if (confirm != true) return;

    final index = exercises.indexOf(exercise);
...
